@startuml

!include ./_commons.style



package uutf {

  abstract class Test
  abstract class TestCase
  abstract class TestSuite
  Test <|-- TestCase
  Test <|-- TestSuite
  Test . TestRunner
  class TestRunner

}

package tests {

  class AddTwoNumbers <<private>> {
    # test()
  }

  class ThrowAnError <<private>> {
    # test()
  }

  together {
    class SubtractTwoNumbers <<private>> {
      # test()
    }
    class IntegerTests
  }

}

TestCase <|-- AddTwoNumbers
TestCase <|-- SubtractTwoNumbers
TestCase <|-- ThrowAnError
TestSuite <|-- IntegerTests

AddTwoNumbers <--+ IntegerTests
SubtractTwoNumbers <--+ IntegerTests
ThrowAnError <--+ IntegerTests

class Main {
  + {static} main(String[])
}


IntegerTests . Main
TestRunner .. Main


@enduml
